--- a/fossclub/static/new_style.css
+++ b/fossclub/static/new_style.css
@@ -67,7 +67,7 @@ img {
 .main {
     justify-content: space-around;
     max-width: 80em;
-    margin: 50px auto 0 auto;
+    margin: 50px auto 50px auto;
 }
 
 .heading {
