--- a/fossclub/templates/users/profile.html
+++ b/fossclub/templates/users/profile.html
@@ -44,7 +44,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" class="mr-10 user-activity__date-clock" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
                         </svg>
-                        21-01-2022
+                        21 Jan 2022
                     </span>
                 </div>
                 <div class="flex horizontal-center w-100 h-20 container"><hr class="vertical-separator user-activity__connector" /></div>
@@ -68,7 +68,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" class="mr-10 user-activity__date-clock" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
                         </svg>
-                        19-01-2022
+                        19 Jan 2022
                     </span>
                 </div>
                 <div class="flex horizontal-center w-100 h-20 container"><hr class="vertical-separator user-activity__connector" /></div>
