--- a/fossclub/templates/perks/list.html
+++ b/fossclub/templates/perks/list.html
@@ -11,8 +11,9 @@
         <div class="ml-50 mr-50 w-100" style="margin-bottom: 30px;">
             <h1 class="heading--primary text-center">Popular perks <span style="color: grey;">({{ perks|length }})</span></h1>
         </div>
+        <div class="grid-perks">
         {% for perk in perks %}
-        <div class="br-5 mr-50 mb-50 bg-white card-container perk-container">
+        <div class="br-5 mar-20 bg-white card-container perk-container">
                 <div class="flex vertical-center mb-10 ml-10 perk-sponsor">
                     <img src="/media/default-avatar.jpg" alt="Sponsoro logo" class="sponsor-logo" />
                     <div class="ml-5 sponsor-name">{{ perk.creator.username }}</div>
@@ -45,12 +46,14 @@
                 <a href="/perks/claim/{{ perk.id }}/"><button class="mb-15 btn" style="cursor: pointer">Claim Now</button></a>
         </div>
         {% endfor %}
+    </div>
 
-        <div class="ml-50 mr-50 w-100">
+        <div class="ml-50 mr-50 mt-50 w-100" style="margin-bottom: 30px;">
             <h1 class="heading--primary text-center">Claimed perks <span style="color: grey;">({{ user.perks_won.all|length }})</span></h1>
         </div>
-        {% for perk in user.perks_won.all %}
-        <div class="br-5 mr-50 mb-50 bg-white card-container perk-container">
+        <div class="grid-perks">
+            {% for perk in user.perks_won.all %}
+        <div class="br-5 mar-20 bg-white card-container perk-container">
                 <div class="flex vertical-center mb-10 ml-10 perk-sponsor">
                     <img src="/media/default-avatar.jpg" alt="Sponsoro logo" class="sponsor-logo" />
                     <div class="ml-5 sponsor-name">{{ perk.creator.username }}</div>
@@ -83,5 +86,6 @@
                 <a href="/perks/claim/{{ perk.id }}/"><button class="mb-15 btn" style="cursor: pointer">Claim Now</button></a>
         </div>
         {% endfor %}
+    </div>
     </main>
 {% endblock %}
