--- a/fossclub/templates/socialaccount/snippets/provider_list.html
+++ b/fossclub/templates/socialaccount/snippets/provider_list.html
@@ -1,7 +1,7 @@
-{% load socialaccount %}
+  {% load socialaccount %}
 
 {% get_providers as socialaccount_providers %}
-
+{% load static %}
 {% for provider in socialaccount_providers %}
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
@@ -14,7 +14,9 @@
 {% endfor %}
 {% endif %}
 <li>
-  <a title="Sign Up With {{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">Sign In With {{provider.name}}</a>
+  <a title="Sign Up With {{provider.name}}" class="flex vertical-center horizontal-center signup-with-provider socialaccount_provider {{provider.id}}" 
+     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+     <img src="{% static '/assets/'|add:provider.name|add:'.png' %}" class="mr-10 provider-img" />
+     Sign In With {{provider.name}}</a>
 </li>
 {% endfor %}
